            guimenu.h
                added   GFMNU_TYPE_RADIO_BUTTON_LIST
                added   GFMNU_ATTR_SELECTED, GFMNU_ATTR_DISTANCE, GFMNU_ATTR_MINIMUM_OF_ONE, GFMNU_ATTR_OPTIONS
            guiobject.cpp
                changed GfuiDraw()
                changed GfuiReleaseObject()
                added   GfuiDrawString() overloaded to support different parameters.
            tgfclient.h
                added   GFUI_RADIOBUTTON and GFUI_RADIOBUTTONLIST
                added   tRadioButtonInfo
                added   tRadioButtonListInfo
                added   tfuiRadioButtonCallback
                added   GfuiMenuCreateRadioButtonListControl()

                added   GfuiMenuBoolToStr()
                added   GfuiMenuControlGetBoolean()
                
                added   GfuiRadioButtonListCreate()
                added   GfuiRadioButtonListSetSelected()
                added   GfuiRadioButtonListGetSelected()
                added   GfuiRadioButtonListSetText()
                added   GfuiRadioButtonListSetTextColor()

                added   GfuiRadioButtonCreate()
                added   GfuiRadioButtonSelect()
                added   GfuiRadioButtonSetText()
                added   GfuiRadioButtonSetTextColor()
                added   GfuiRadioButtonIsSelected()

                added   GfuiDrawString(): overload
                added   GfuiFontClass: expose to API
    main/
        main.cpp
            added singletonfolder setup
            added mediator shut down
    interfaces/
        playerpref.h
            added HM_ADRV_FILE define
        sound.h
            added intervention sound volume xml parameter 
    modules/
        racing/standardgame
            raceinit.cpp
                changed reLoadSingleCar() to fix isHuman flag
                changed ReInitCars() to fix isHuman flag
                changed ReCleanup() to also shut down updaters
            racesituation.cpp
                change deltaTime to be constant value
